Fix poster clipping

--- a/blocks/Hero.module.css
+++ b/blocks/Hero.module.css
@@ -2,14 +2,15 @@
   display: flex;
   flex-direction: column;
   padding-top: 140px !important;
+  overflow: hidden;
 }
 
 /* Prevents overflow */
 .overflow {
   position: relative;
   display: block;
-  padding-left: 2rem;
-  padding-right: 2rem;
+  padding-left: 3rem;
+  padding-right: 3rem;
   padding-bottom: 1rem;
   padding-top: 1rem;
   width: 100%;
@@ -47,7 +48,7 @@
   display: block;
   max-width: 100%;
   max-height: 100%;
-  right: -8rem;
+  right: -6rem;
   bottom: 0;
   transform: scale(0.75);
 }
